# ml-llm-portfolio

./: .codecov.yml  .flake8  .gitignore  BANKING_AI_PLATFORM_ROADMAP.md  BANKING_TEST_CASES.md  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  WEBPAGE_README.md  create_model_structure.py  create_regression_data.py  create_test_data.py  demo.py  demo_linear_regression.py  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/classification/: random_forest.yaml
configs/regression/: gradient_descent.yaml  linear_regression.yaml
data/processed/: test.csv
docs/: .nojekyll  CNAME  README.md  index.html  linear_regression_banking.md  ml_roadmap.html
models/linear_regression/configs/: linear_regression.yaml
models/linear_regression/data/: regression_inference.csv  regression_test.csv  regression_train.csv  regression_valid.csv
models/random_forest/configs/: random_forest.yaml
models/random_forest/data/: inference.csv  train.csv  valid.csv
models/ridge_regression/: README.md
models/ridge_regression/configs/: ridge_regression.yaml
reports/: demo_linear_regression_predictions.csv  predictions_rf.csv
src/: cli.py
src/algorithms/: __init__.py  gradient_descent.py  linear_regression.py  random_forest.py
src/core/: io.py  metrics.py  utils.py
src/llm_agents/: __init__.py  report_agent.py
src/pipelines/: classification.py  pipeline.py  regression.py
test_data/: credit_risk_data.csv  customer_segmentation_data.csv  dataset_summary.csv  market_data.csv  portfolio_data.csv  recommendation_interactions.csv  recommendation_products.csv  recommendation_users.csv  transaction_data.csv
tests/: test_core.py
theory/: arima.md  dbscan.md  decision_tree.md  gradient_boosting.md  gradient_descent.md  hierarchical_clustering.md  kmeans_clustering.md  lasso_regression.md  linear_regression.md  logistic_regression.md  monte_carlo.md  one_class_svm.md  polynomial_regression.md  prophet.md  random_forest.md  ridge_regression.md  support_vector_machine.md
